add venue search endpoint
