# src/components/venue/venue.router.ts
@@ -7,4 +7,5 @@ export const venueRouter = express.Router();
 venueRouter.use(authMiddleware);
 
 venueRouter.post('/', json(), venueController.create);
+venueRouter.get('/search', venueController.search);
 venueRouter.get('/:id', venueController.getById);
